added comment functionality
