# todo_app/routes/todo_item.py
@@ -1,7 +1,8 @@
 import logging
 from flask import Blueprint, request
 
-from todo_app.common.forms.todo_item_management_forms import TodoItemForm, AssignTodoItemForm
+from todo_app.common.forms.todo_item_management_forms import \
+    (TodoItemForm, AssignTodoItemForm, AddCommentTodoItemForm)
 from todo_app.services.todo_item_management_service.todo_item_management_data\
     import TodoItemData
 from todo_app.utils.session_management import have_logged_in
@@ -43,4 +44,16 @@ def get_assign_todo_item():
     logger.info('Incoming request for get assign todo item to user.')
     query_params = request.args
     response = TodoItemData.get_assign_todo_item(query_params)
+    return response
+
+
+@todo_item_management_process.route("/comment", methods=["POST"])
+@have_logged_in()
+def post_comment_todo_item():
+    """
+        Add Comment Todo Item
+    """
+    logger.info('Incoming request for add comment todo item.')
+    form = AddCommentTodoItemForm()
+    response = TodoItemData.add_comment_todo_item(form)
     return response
