# todo_app/static/swagger.yaml
@@ -149,6 +149,28 @@ paths:
         '500':
           description: Internal server error
   
+  /api/v1/todo/item/comment:
+    post:
+      tags:
+        - Todo Items
+      summary: Add Comment in Todo Item
+      responses:
+        '200':
+          description: Success
+        '400':
+          description: Bad request or Invalid parameters
+        '500':
+          description: Internal server error
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/commenttodoitemRequest'
+            example:
+              todo_item_id: 1
+              comment: "First comment"
+
 
 
 components:
@@ -198,3 +220,11 @@ components:
           type: integer
         assign_to:
           type: list
+  
+    commenttodoitemRequest:
+      type: object
+      properties:
+        todo_item_id:
+          type: integer
+        comment:
+          type: string
